Changes in @NEW@:
  o Build Changes:
    * The addSource source action will now replace existing files,
      rather than replacing their contents.  This implies that the
      mode of the existing file will not be inherited, and an
      existing readonly file will not prevent addSource from
      working.

Changes in 1.0.12:
  o Client changes:
    * The rollback command now applies rollbacks up to and including
      the rollback number specified on the command line. It also
      allows the user to specify the number of rollbacks to apply
      (from the top of the stack) instead of which rollback to
      apply. (bz #884)
    * Previously, the code path for installing files as part of a new
      trove required an exception to be handled.  The code has been
      refactored to eliminate the exception in order to reduce install
      times.

  o Build Changes:
    * The cvc command now has a --show-buildreqs option that prints all
      build requirements.  The --no-deps argument for cvc has been
      aliased to --ignore-buildreqs for consistency.

  o Bug Fixes:
    * Installing into a relative root <e.g. --root foo> when running
      as root no longer generates a traceback. (bz #873)
    * Replaced files are now stored in rollbacks. (bz #915)
    * File conflicts are now also detected via the database, not just
      via real file conflicts in the filesystem.
    * A bug that resulted in multiple troves owning a file has been fixed.
    * Rollbacks of troves that were cooked locally will no longer
      raise a TroveIntegrityError.
    * The "conary remove" command no longer generates a traceback when
      the filename given cannot be unlinked. (bz #887)
    * The missing usage message displayed when "cvc" and "conary" are
      run with no command line arguments has been restored.
    * Rollbacks for initial contents files didn't work; applying
      rollbacks now ignores that flag to get the correct contents on
      disk. (bz #924)